--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
